新增邪恶的前缀 修复附魔卷轴吃附魔问题